--- a/fgb.html
+++ b/fgb.html
@@ -3,27 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Becoming A Fitness Geek!</title>
-    <p>By Nyasia Williams | Posted on: 05/06/2025</p>
+    <link rel="stylesheet" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/stylecss.css">
+    <link rel="stylesheet" href="css/style.css">
+     <title>Becoming A Fitness Geek!</title>
+     <p>By Nyasia Williams | Posted 05/06/2025</p>
 </head> 
 <body>
 <header>
+    <div class="Self Help Blog">
+    <div class="Introduction">
 <h1>Becoming A Fitness Geek</h1>
 <p>Welcome to your step by step guide to becoming a fitness geek. As a fitness coach myself and someone who, I believe has great mental fortitude. I'm someone who's constantly learning, working to balance life, family, my professional life, trying to consume things to strengthen mind and body. It's why I'd like to identify myself as a Fitness Geek. In this blog, I will share some of the ways I've become that, so hopefully you can apply some of these recommendations and become a better you, yourself. These are just a few things I've applied to my life, and I hope they can help you as well.
+</div>
+</div>
 </p>  
+<div class="fitness"></div>
 <h2>Physical Fitness</h2>
 <p>Research shows that muscle is the key to longevity. As we can see all over social media today, there are 60, 70, 80 years old in the gym doing resistance training. Some of them are doing it for the asthetic, the bodybuilder's physique. They're doing it, so they can live longer, so they can continue to play with their grandchildren, maintain that sense of independency, where they don't need to be in an assisted living home. As a former military veteran, being physically fit for full duty was everything. We were given a physical assessment test to make sure we met certain standards, outside of serving 7 years, I was also an athlete in highschool, I played basketball. As we know that required alot of running, jumping, upper body strength to shoot the ball and rip it out of the air against other players. Cardio Vascular health was crucial in that sport.
 Physical Fitness is the foundation to living a long life. It starts there. The first thing you have to do is commit to changing your lifestyle. Commit to balancing out your schedule to make time to move your body. No one's asking for 1 hr everyday, start with 30 mins a day. Build from there. That can be for people who don't have an issue with discipline. For those of you who have a issue with discipline, I'd suggest hiring a fitness coach. Their job is to hold you accountable, do their best to keep you motivated, and take all of the guess work out of the process. Establishing a structured plan, a schedule, finding out your why will be the blueprint to your success. The journey fitness is a long one and progress is not linear, there will be days where you're tired after work, or not feeling the best in the morning before work to even step into the gym. Discipline is remembering your why, not making any excuses and still go. You will feel better after going and putting the work in.
-There are quite a few chemicals that are releases when you exercise. A few of them are Endorphins, Dopamine, and Seratonin. Dopamine is the "feel good" hormone. Seratonin is the "mood stabilizer". Endorphins are like your body's natural pain relievers. I'm not sure how you want to feel, but I'd much rather be happier after a crappy day, then still hold on to those negative emotions, which will eventually break my body down more, maybe cause a headache. Not only will you be stressed, but then you'll be annoyed and in pain due to the headache. Your body feeds off of your emotions. We all have specific goals, things we want to work on. Whether it's gaining weight/muscle, losing weight/toning, running faster and longer, imagine how you'd feel actually achieving that? There will be days where you question the journey, but once achieved you'll feel unstoppable.
+There are quite a few chemicals that are releases when you exercise. A few of them are Endorphins, Dopamine, and Seratonin. Dopamine is the "feel good" hormone. Seratonin is the "mood stabilizer". Endorphins are like your body's natural pain relievers. I'm not sure how you want to feel, but I'd much rather be happier after a crappy day, then still hold on to those negative emotions, which will eventually break my body down more, maybe cause a headache. Not only will you be stressed, but then you'll be annoyed and in pain due to the headache. Your body feeds off of your emotions. We all have specific goals, things we want to work on. Whether it's gaining weight/muscle, losing weight/toning, running faster and longer, imagine how you'd feel actually achieving that? There will be days where you question the journey, but once achieved you'll feel unstoppable.</p>
+
+
 <h3>Mental Fortitude/Mental Health</h3>
+<p>
 I'm not sure about you, but I am a true believer in therapy. A true believer in the power of venting, how free you feel after letting some of your stresses out verbally, it's even better when you can let them out without fear of judgement or anyone else knowing except you and your therapist. As a kid and young adult I didnt pursue therapy for the traumas I had faced early on in life. Some of those unresolved traumas, bled into my behaviors, some of my negative thoughts. I, at one point had suicidal idiations. Thankfully about years and continuous therapy, I di my best not maintain mental clarity, mental fortitude even in the toughest moments. I developed that through, taking the time to learn myself, get in tune with nature, "the universe" so to speak and learn to not stress over things I don't have any control over. I have learned to be grateful and proud of who I am, what I have, and embrace what I'm subject to become through that hard work of being still. I have firm belief and understanding of the roll silence plays in my life. We live in a chaotic world, a 24/7, 365 cycle. Sometimes, trying to tune it out, is impossible, so after a long day of work I'll go to the gym to hit the iron and "leave it all on the floor", then I'll go in the sauna and take some deep breathes for a few minutes and release whatever may be left internally. Fitness as well as meditation are a huge staple for me. it has helped me to gain that mental fortitude I need to make it in the world we live in. No One is going to take care of you, better than you can. You have to know who you are, what you are, why you are who you are. Once oyu gain an understanding of that, there's isnt much that can knock you off your square.
 </p>
+</div>
 </body>
 </header>
 </html>
