--- a/fgb.html
+++ b/fgb.html
@@ -6,7 +6,7 @@
      <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href=@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap')
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
      <title>Becoming A Fitness Geek!</title>
      <p>By Nyasia Williams | Posted 05/06/2025</p>
 </head> 
