--- a/fgb.html
+++ b/fgb.html
@@ -34,7 +34,7 @@ I'm not sure about you, but I am a true believer in therapy. A true believer in 
 <h4>Are You Ready?</h4>
     Just like everything in life, this journey, this process to achieve mental, spiritual, and physical strength will require al ot of work. The first step lies in holding yourself accountable. Acknowledging your issues, things you're not happy with. After that is said and done, you may need to seek professional help. For the mental and spiritual aspects you can see a therapist or a religious leader. For the physical you can hire a trainer and nutritionist. Remember you are not alone, you're not going to get it right the first attempt. Progress in all aspects of life is not linear, your path is not a straight line, nor is it one that doesn't come with pot holes or bumps along the way. Forgive yourself, dust yourself off if you fall, and try again. You'll eventually achieve that goal of becoming a Fitness Geek!
     <div class="image">
-    <img src="images/Mental-Toughness-970x647.jpg" alt="wrecking ball crumbling after colliding with brain.">
+    <img src="images/Mental-Toughness- 970x647.jpg" alt="wrecking ball crumbling after colliding with brain.">
     </div>
 </p>
 </p>
