--- a/fgb.html
+++ b/fgb.html
@@ -11,7 +11,9 @@
      <p>By Nyasia Williams | Posted 05/06/2025</p>
 </head>
 <body>
+<div class="background-image">
 <img src="images/Mental-Toughness-970x647.jpg">
+</div>
 <header>
     <div class="Introduction">
 <h1>Becoming A Fitness Geek</h1>
