--- a/fgb.html
+++ b/fgb.html
@@ -9,11 +9,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
      <title>Becoming A Fitness Geek!</title>
      <p>By Nyasia Williams | Posted 05/06/2025</p>
+     <style>
+        body{
+        background-image: url('/images/Mental-Toughness-970x647.jpg');
+	    background-repeat: no-repeat;
+	    background-size: cover;
+	    background-attachment: fixed;
+    }
+     </style>
 </head>
 <body>
-<div class="background-image">
+
 <img src="images/Mental-Toughness-970x647.jpg">
-</div>
 <header>
     <div class="Introduction">
 <h1>Becoming A Fitness Geek</h1>
