--- a/fgb.html
+++ b/fgb.html
@@ -18,7 +18,7 @@
             background-repeat: no-repeat;
             background-position: center;
             margin: 0;
-            height: 100vh;
+            min-height: 200vh;
         }
     </style>
     <div class="Introduction">
