--- a/fgb.html
+++ b/fgb.html
@@ -22,8 +22,8 @@
             
         }
         p{
-            color: white;
-            font-size: 16pt;
+            color: red;
+            font-size: 14pt;
         }
     </style>
     <div class="Introduction">
