--- a/fgb.html
+++ b/fgb.html
@@ -22,7 +22,7 @@
             
         }
         p{
-            color: red;
+            color: black;
             font-size: 14pt;
         }
     </style>
