--- a/fgb.html
+++ b/fgb.html
@@ -27,9 +27,9 @@
         }
         </style>
         
-    <div class="body-container">
-    <div class="paragraph">
+    <div class="heading">
 <h1>Becoming A Fitness Geek</h1>
+<div class="paragraph">
 <p>Welcome to your step by step guide to becoming a fitness geek. As a fitness coach myself and someone who, I believe has great mental fortitude. I'm someone who's constantly learning, working to balance life, family, my professional life, trying to consume things to strengthen mind and body. It's why I'd like to identify myself as a Fitness Geek. In this blog, I will share some of the ways I've become that, so hopefully you can apply some of these recommendations yourself and become a better you. These are just a few things I've applied to my life, and I hope they can help you as well.</p> 
 <img src="images/overhead press woman.jpeg" alt="woman pressing barbell overhead.">
 
