--- a/fgb.html
+++ b/fgb.html
@@ -22,14 +22,12 @@
             
         }
         p{
-            color: black;
+            color: white;
             font-size: 14pt;
         }
-        </style>
-        
+        </style>  
     <div class="heading">
 <h1>Becoming A Fitness Geek</h1>
-<div class="paragraph">
 <p>Welcome to your step by step guide to becoming a fitness geek. As a fitness coach myself and someone who, I believe has great mental fortitude. I'm someone who's constantly learning, working to balance life, family, my professional life, trying to consume things to strengthen mind and body. It's why I'd like to identify myself as a Fitness Geek. In this blog, I will share some of the ways I've become that, so hopefully you can apply some of these recommendations yourself and become a better you. These are just a few things I've applied to my life, and I hope they can help you as well.</p> 
 <img src="images/overhead press woman.jpeg" alt="woman pressing barbell overhead.">
 
@@ -51,7 +49,6 @@ I'm not sure about you, but I am a true believer in therapy. A true believer in 
 <p>Just like everything in life, this journey, this process to achieve mental, spiritual, and physical strength will require al ot of work. The first step lies in holding yourself accountable. Acknowledging your issues, things you're not happy with. After that is said and done, you may need to seek professional help. For the mental and spiritual aspects you can see a therapist or a religious leader. For the physical you can hire a trainer and nutritionist. Remember you are not alone, you're not going to get it right the first attempt. Progress in all aspects of life is not linear, your path is not a straight line, nor is it one that doesn't come with pot holes or bumps along the way. Forgive yourself, dust yourself off if you fall, and try again. You'll eventually achieve that goal of becoming a Fitness Geek!</p>
 <img src="images/istockphoto-1344687455-612x612.jpg" width="200" height="200">
 </div>  
-</div>
 </body>
 </html>
 
