--- a/fgb.html
+++ b/fgb.html
@@ -22,6 +22,7 @@
             
         }
         p{
+            border: 3px grey dashed;
             color: white;
             font-size: 14pt;
         }
