--- a/fgb.html
+++ b/fgb.html
@@ -22,9 +22,10 @@
             
         }
         p{
-            border: 3px grey dashed;
+            border: 3px black dashed;
             color: white;
             font-size: 14pt;
+            background-color: blanchedalmond;
         }
         </style>  
     <div class="heading">
