--- a/fgb.html
+++ b/fgb.html
@@ -25,7 +25,7 @@
             border: 3px black dashed;
             color: white;
             font-size: 14pt;
-            background-color: blanchedalmond;
+            background-color: grey;
         }
         </style>  
     <div class="heading">
